--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <header class="header"> 
         <h1>AdoteAqui!</h1>
          <nav class="menu">
-            <a>Home</a>
-            <a>Sobre</a>
-            <a>Contato</a>
+            <a href="">Home</a>
+            <a href="./sobre/index.html">Sobre</a>
+            <a href="">Contato</a>
          </nav>
     </header>
     <h2>Dê um lar para um de nossos animais! eles estão esperando por uma família &#128577; e essa família pode ser você! &#128512; <p>Nós temos:</p> </h2>
@@ -26,31 +26,35 @@
         <li>Cavalos</li>
         <li>Dinossauros</li>
       </ul>
-        <section class="fotos">
-         <div>
+    <section class="fotos">
+        <div>
             <img src="./fotos/thumbs (1).jpg" alt="">
             <h3>Dog caramelo</h3>
-         </div>
-         <div>
+        </div>
+        <div>
             <img src="./fotos/cat.jpg" alt="">
-            <h3>Cat caramelo</h3>
-         </div>
-         <div>
+            <h3>Gato caramelo</h3>
+        </div>
+        <div>
             <img src="./fotos/tartaruga.jpg" alt="">
             <h3>Leonardo</h3>
-         </div>
-         <div>
+        </div>
+        <div>
             <img src="./fotos/PéDePano.jpg" alt="">
             <h3>Pé de Pano</h3>
-         </div>
-       </section>
-    </main>
-    <footer>
+        </div>
+    </section>
+</main>
+<footer class="final">
 
-        <h2>teste</h2>
+    <p class="final" id="logo">AdoteAqui!</p>
+    <p class="final">Contatos <br> (21) 4002-8922 <br> Centro - RJ</p>
 
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d29402.78532082978!2d-43.195628152859896!3d-22.900525607670268!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x997f5e151c7217%3A0x7ffdf9c2fc30b97d!2sCentro%2C%20Rio%20de%20Janeiro%20-%20RJ!5e0!3m2!1spt-BR!2sbr!4v1663620159104!5m2!1spt-BR!2sbr" width="250" height="100" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 
-    </footer>
+   
 
+</footer>
+        
 </body>
 </html>
